version 1.0.7
- Correct the attribution of autocorrelation test (Breusch-Godfrey
  rather than Breusch-Pagan)
- Fix bug in reading of remote database info line (Gtk-2.0 version)

03/16/03 version 1.0.6
- minor adjustment to model print output formatting
- fix for correlogram graph (was incompatible with older gnuplot)
- fix a couple of minor gretlcli bugs
- add (optional) LAPACK support for various "advanced"
  features
- fix time-series attributes of data9-1, data9-10
- prevent normal random generator from outputting NaNs
- fix bug with use of "store" command in a loop, in GUI program
- fix translation problems that disabled some menus when not
  shown in English
- fix translation problem that caused a crash when trying to save
  data under a different name in non-English versions on Linux
- add new commands, "system" (supports SUR) and "coint2" 
  (Johansen trace test for cointegration)
- add robust LM test for use with adding/omitting variables in 
  relation to a model estimated using hccm
- permit comments starting with '#' on first line of script
- change to Mersenne Twister for gretl's PRNG, and supply the
  Marsaglia test suite for the PRNG in the gretl source package
- make correlogram and periodogram functions more robust in
  the face of weird data

02/20/03 version 1.0.5
- fix missing translations; fix build of rpm
- add support for Gujarati textbook data files

02/19/03 version 1.0.4
- add sst() function in genr for Total Sum of Squares of a 
  variable
- fix bug in genr: a long genr command could overflow the space
  allocated for variable labels
- fix bugs in graphing: "non-standard" graphs could cause problems
  including crashes
- fix bug in coefficient printing: sometimes values were being
  truncated at 5 figures
- when dataset is sub-sampled, add dialog offering option to
  restore full data range before saving data
- add recognition of environment variables GRETL_PNG_GRAPH_FONT
  and GRETL_PNG_GRAPH_FONT_SIZE (e.g. "verdana" and "8") for