@@ -1921,13 +1921,15 @@ void do_model (GtkWidget *widget, gpointer p)
 
     case CORC:
     case HILU:
-	err = hilu_corc(&rho, command.list, &Z, datainfo, action, prn);
+	err = hilu_corc(&rho, command.list, &Z, datainfo, 
+			&paths, 0, action, prn);
 	if (err) {
 	    errmsg(err, prn);
 	    break;
 	}
 	*pmod = lsq(command.list, &Z, datainfo, action, 1, rho);
 	err = model_output(pmod, prn);
+	register_graph();
 	break;
 
     case OLS:
@@ -2885,7 +2887,7 @@ void add_model_stat (MODEL *pmod, const int which)
 
 void resid_plot (gpointer data, guint xvar, GtkWidget *widget)
 {
-    int err, origv = datainfo->v, plot_list[4], lines[1];
+    int err, origv = datainfo->v, plot_list[5], lines[1];
     windata_t *mydata = (windata_t *) data;
     MODEL *pmod = (MODEL *) mydata->data;
     int ts = dataset_is_time_series(datainfo);
@@ -2894,8 +2896,9 @@ void resid_plot (gpointer data, guint xvar, GtkWidget *widget)
     /* add residuals to data set temporarily */
     if (add_fit_resid(pmod, 0, 1)) return;
 
-    plot_list[0] = 2;
+    plot_list[0] = 3; /* extra entry to pass depvar name to plot */
     plot_list[1] = datainfo->v - 1; /* last var added */
+    plot_list[3] = pmod->list[1];
 
     strcpy(datainfo->varname[plot_list[1]], _("residual"));
 
@@ -2915,8 +2918,9 @@ void resid_plot (gpointer data, guint xvar, GtkWidget *widget)
 
     /* plot separated by dummy variable? */
     if (pdum) {
-	plot_list[0] = 3;
+	plot_list[0] = 4;
 	plot_list[3] = pdum;
+	plot_list[4] = pmod->list[1];
     }
 
     /* generate graph */
@@ -4177,7 +4181,8 @@ static int gui_exec_line (char *line,
 
     case CORC:
     case HILU:
-	err = hilu_corc(&rho, command.list, &Z, datainfo, command.ci, prn);
+	err = hilu_corc(&rho, command.list, &Z, datainfo, 
+			NULL, 1, command.ci, prn);
 	if (err) {
 	    errmsg(err, prn);
 	    break;
